tests/Checker/everything/errors/14a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *14: invalid initialiser: array initialiser for scalar
Compilation was unsuccessful.
